--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartEats — Login</title>
     <link rel="stylesheet" href="css/style.css">
+    <option value="admin">Admin</option>
+
+
 </head>
 
 <body style="
@@ -88,6 +91,18 @@
     <script type="module">
         import { handleLogin } from './js/auth.js';
         window.handleLogin = handleLogin;
+        const users = get("users") || [];
+
+if (!users.find(u => u.email === "admin@gmail.com")) {
+    users.push({
+        name: "Administrator",
+        email: "admin@gmail.com",
+        password: "admin123",
+        role: "admin"
+    });
+    save("users", users);
+}
+
     </script>
 
 </body>
